tests/integration/errors/variadic_not_last.rsg
// TEST: compile_error
// EXPECT-ERROR: variadic must be last parameter

fn bad(values: ..i32, extra: i32) -> i32 {
    0
}

fn main() {
    bad(1, 2, 3)
}
